<resources>
    <string name="app_name">Flanki</string>

    <!-- Strings related to login -->
    <string name="sign_in">Logowanie</string>
    <string name="prompt_email_login">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="error_invalid_email">Ten login jest nieprawidłowy</string>
    <string name="error_invalid_password">Hasło jest za krótkie</string>
    <string name="error_incorrect_password">Hasło nieprawidłowe</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="register_info">Nie posiadasz konta? Zarejestruj się.</string>

    <!-- Strings related to register -->
    <string name="sign_up">Rejestracja</string>
    <string name="prompt_email">Adres e-mail</string>
    <string name="prompt_login">Login</string>
    <string name="action_sign_up">Zarejestruj się</string>
    <string name="login_already_exists">Login jest już zajęty</string>
    <string name="login_info">Masz już konto? Zaloguj się.</string>

    <string name="logout">Zostałeś wylogowany.</string>
    <string name="logout_error">Blad przy wylogowywaniu.</string>
    <string name="annonymous_user_login">Błąd z zalogowaniem gościa.</string>
    <string name="user_dont_exist">Użytkownik nie istnieje.</string>
    <string name="account_created">Konto zostało stworzone, zaloguj się teraz.</string>
    <string name="title_activity_maps">Map</string>

</resources>
